<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_round"
    android:elevation="10dp"
    android:layout_marginBottom="10dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/play"
        android:textSize="14sp"
        android:textColor="@color/button_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSongName" />

    <TextView
        android:id="@+id/btnDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:textSize="14sp"
        android:textColor="@color/button_color"
        android:layout_marginTop="8dp"
        android:layout_marginStart="38dp"
        app:layout_constraintStart_toEndOf="@+id/btnPlay"
        app:layout_constraintTop_toBottomOf="@id/tvSongName"/>

</androidx.constraintlayout.widget.ConstraintLayout>